log/build_2023-02-01_14-32-15/asbir_navigation/stderr.log
  File "/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/classes.py", line 18
    if not bool(rotation)
                        ^
SyntaxError: invalid syntax

